# INASE

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: run.yml
asset/: core.py  hyperparameters.py  url_scraper.py
asset/scrap_data/: scrap_data.py
config/: crud_operation.py  db_config.py  db_manage.py
