[project]
name = "data-scrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "loadenv>=0.1.1",
    "pymongo[srv]>=4.16.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
]
